(12/06/20)
==========

· 🐛 FIX: Doom, Heretic. Removed Hexen, Strife (check Crispy-doom Github issue).

· 📦 IMPROVE: Helper now install Box86, GL4ES, Mesa or Mono libs when is needed. 

(08/06/20)
==========

· 🐛 FIX: Diablo 1.

(02/04/20)
==========

· Updated Spectrum emulator unrealspeccy to 0.86.11

(08/03/20)
==========

· Fix Games > Revolt.

(07/03/20)
==========

· Update Games > Crispy Doom.

(16/11/19)
==========

· Add Games > Diablo 2 LOD Spanish Ed.

(02/10/19)
==========

· Add Games > Diablo 1

(27/09/19)
==========

· Add Games > Revolt for Raspberry Pi.

· Make openMSX script compatible with Raspbian Buster.

(17/09/19)
==========

· Fix Descent for Raspberry Pi 4.

(16/09/19)
==========

· Fix Dune 2.

(14/09/19)
==========

· Update Remove packages & others script.

(24/01/19)
==========

· Updated DXX-Rebirth to version 0.60.100

(18/01/19)
==========

· Updated webmin, removepkg & others script.

(14/01/18)
==========

· Updated Games/Dune Legacy to 0.96.4

· Updated & fixed url broken in Games/Descent 1 & 2 to 0.59.100.20161206-1

· Added Games > Fruit'Y

(13/01/18)
==========

· Fixed issue with Tweaks/others script

· Added new packages to Tweaks/removepkg

· Fixed desktop menu entry to PiKISS

· Fixed Tweaks/services

(22/10/17)
==========

· Added Emulators > OpenMSX 0.14

(13/08/17)
==========

· Added Server > Octoprint

(25/07/17)
==========

· Added Server > Bittorrent Sync alternatives

(24/07/17)
==========

· Updated and improved Server > Owncloud 10.0.2

· New helper's functions

(21/07/17)
==========

· PIKISS reach version 1.0!

· Improvements, fixes and upgrades

· Added Server > VPNServer

· Added Server > Auto update

(10/07/17)
==========

· Updated Server > Frameworks

(09/07/17)
==========

· Updated Server > Web Server+PHP7

(09/03/17)
==========

· Added Emus > Advance MAME 3.4

· Added Emus > MAME 0.183

(02/10/16)
==========

· Added Emus > OpenMSX 0.13.0

(13/09/16)
==========
