@@ -1,50 +1,48 @@
 #!/bin/bash
 #
-# Description : CapriceRPI2 for Raspberry Pi 2 (Amstrad)
+# Description : Caprice32 for Raspberry Pi(Amstrad)
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 1.1 (07/Sep/16)
-# Compatible  : Raspberry Pi 2 & 3 (tested)
+# Version     : 1.2 (15/Jun/20)
+# Compatible  : Raspberry Pi 2-4 (tested)
 #
 # HELP        : https://www.raspberrypi.org/forums/viewtopic.php?f=78&t=105811
+#			  : For load disk, type cat and then run"game_name"
 #
 clear
 
 INSTALL_DIR="$HOME/games"
-URL_FILE="http://misapuntesde.com/res/CapriceRPI2-TEST_BUILD.tgz"
+URL_FILE="http://misapuntesde.com/res/caprice32_4-60.tar.gz"
 GAME_URL="http://www.amstradabandonware.com/mod/upload/ams_en/games_disk/brucelee.zip"
 
-if [[ -f $INSTALL_DIR/caprice/capriceRPI2 ]]; then
+if [[ -f $INSTALL_DIR/caprice/cap32 ]]; then
     read -p "Warning!: Caprice already installed. Press [ENTER] to exit..."
     exit
 fi
 
-playgame()
-{
+playgame(){
     if [[ -f $INSTALL_DIR/caprice/disc/brucelee.dsk ]]; then
         read -p "Do you want to run caprice now? [y/n] " option
         case "$option" in
-            y*) cd $INSTALL_DIR/caprice/ && ./capriceRPI2 ;;
+            y*) cd $INSTALL_DIR/caprice/ && ./cap32 ;;
         esac
     fi
 }
 
-install()
-{
+install(){
     echo "Installing dependencies..."
     sudo apt install -y libts-0.0-0
     echo "Downloading packages..."
-    mkdir -p $INSTALL_DIR && cd $_
-    wget $URL_FILE && tar xzvf CapriceRPI2-TEST_BUILD.tgz && rm CapriceRPI2-TEST_BUILD.tgz && mv RELEASE caprice
-    cd caprice
+    mkdir -p $INSTALL_DIR/caprice && cd $_
+    wget $URL_FILE && tar xzvf caprice32_4-60.tar.gz && rm caprice32_4-60.tar.gz
     cd disc && wget $GAME_URL && unzip brucelee.zip && rm brucelee.zip && cd ..
 
-    echo "Done!. Go to install path and type: ./capriceRPI2. F8 open the menu."
+    echo "Done!. Go to install path and type: ./cap32. F1 open the menu."
     playgame
     read -p "Press [Enter] to continue..."
     exit
 }
 
-echo -e "CapriceRPI2 for Raspberry Pi 2/3\n==============================\n\n· Thanks to KaosOverride.\n· F8: Menu\n· More Info: http://www.amstrad.es/forum/viewtopic.php?f=34&t=3878\n· Add game Bruce Lee (.dsk) to play\n\nInstall path: $INSTALL_DIR/caprice"
+echo -e "Caprice32 for Raspberry Pi\n==========================\n\n· F1: Menu\n· More Info: https://github.com/ColinPitrat/caprice32\n· For load disk, type cat and then run\"game_name\"\n· Add game Bruce Lee (.dsk) to play\n\nInstall path: $INSTALL_DIR/caprice"
 while true; do
     echo " "
     read -p "Proceed? [y/n] " yn
